--- a/pics.css
+++ b/pics.css
@@ -5,6 +5,11 @@ body{
 }
 
 h1{
+    text-align: center;
     font-size: xx-large;
+    color: rgb(217, 142, 240);
+}
+
+p{
     color: rgb(217, 142, 240);
 }
